Terraform/Modules/Route-Table/main.tf
########################################
# Public Route Table
########################################

resource "aws_route_table" "public" {
  vpc_id = var.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = var.internet_gateway_id
  }

  tags = {
    Name = "${var.project_name}-Public-RT"
  }
}

########################################
# Private Route Table
########################################

resource "aws_route_table" "private" {
  vpc_id = var.vpc_id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = var.nat_gateway_id
  }

  tags = {
    Name = "${var.project_name}-Private-RT"
  }
}

########################################
# Public Route Table Associations
########################################

resource "aws_route_table_association" "public_subnet_1" {
  subnet_id      = var.public_subnet_1_id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_subnet_2" {
  subnet_id      = var.public_subnet_2_id
  route_table_id = aws_route_table.public.id
}

########################################
# Private Route Table Associations
########################################

resource "aws_route_table_association" "private_subnet_1" {
  subnet_id      = var.private_subnet_1_id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_subnet_2" {
  subnet_id      = var.private_subnet_2_id
  route_table_id = aws_route_table.private.id
}
